--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Test and Deploy to Lambda
+name: Build and Deploy Lambda Docker Image
 
 on:
   push:
@@ -6,55 +6,47 @@ on:
       - main
 
 jobs:
-  test-and-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
-          python-version: '3.11'
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Install dependencies (for testing and packaging)
+      - name: Log in to Amazon ECR
+        id: ecr-login
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build Docker image
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
+          IMAGE_NAME=legal-ocr-agent
+          TAG=latest
+          docker build -t $IMAGE_NAME:$TAG .
 
-      - name: Run tests
+      - name: Tag Docker image for ECR
         run: |
-          pytest tests/
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          REGION=${{ secrets.AWS_REGION }}
+          REPO_NAME=legal-ocr-agent
+          IMAGE_TAG=latest
+          ECR_URI=$ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$REPO_NAME:$IMAGE_TAG
 
-      - name: Build deployment package
+          docker tag legal-ocr-agent:$IMAGE_TAG $ECR_URI
+          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
+
+      - name: Push Docker image to ECR
         run: |
-          mkdir -p python
-          pip install -r requirements.txt -t python/
-          mkdir package
-          cp -r src/ package/
-          cp lambda_handler.py package/
-          cp -r python/* package/
-          cd package
-          zip -r ../lambda_package.zip .
+          docker push $ECR_URI
 
-      - name: Deploy to AWS Lambda
-        uses: appleboy/lambda-action@v0.2.0
-        with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ${{ secrets.AWS_REGION }}
-          function_name: extractInvoiceLambda
-          zip_file: lambda_package.zip
-
-      - name: Notify failure on Discord
-        if: failure()
-        uses: Ilshidur/action-discord@master
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          message: |
-            ❌ Le déploiement de la fonction Lambda a échoué sur le repo `${{ github.repository }}` !
-            Branche : `${{ github.ref_name }}`
-            Auteur : `${{ github.actor }}`
-            Voir les logs : ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      - name: Deploy Lambda function with new image
+        run: |
+          aws lambda update-function-code \
+            --function-name legal-ocr-agent \
+            --image-uri $ECR_URI
